Small add-ons to the Search.razor and styling for scrollbar color
Add-ons:
- Back to top button
- Individual open/close now.

--- a/ProjectBank/Client/Pages/Search.razor
+++ b/ProjectBank/Client/Pages/Search.razor
@@ -60,7 +60,10 @@ else{
        </div>  
     }
 }
-
+<br/>
+<button class="to_top_button" id="top_btn" onclick="document.body.scrollTop = 0; document.documentElement.scrollTop = 0;">
+    <label class="oi oi-arrow-top" id="to_top_label" style="margin: 0;"></label>
+</button>
 
 @code {
     private bool _isHidden = true;
