-save and load images and pdfs from cloud

--- a/ProjectBank/Client/Pages/Swipe.razor
+++ b/ProjectBank/Client/Pages/Swipe.razor
@@ -31,6 +31,7 @@ else
                 <hr/>
                 <br/>
                 <textarea class="project_description" readonly="readonly">@_currentProject.Description</textarea>
+                @*<img class="card-img-top" src=@_currentProject.ImageUrl alt = "Project image">*@
                 <br/>
                 <hr/>
                 <br/>
