--- a/ProjectBank/Client/Pages/Browse.razor
+++ b/ProjectBank/Client/Pages/Browse.razor
@@ -8,7 +8,7 @@
 <PageTitle>ProjectBank - Browse</PageTitle>
 
 <div class="browse_all">
-    <button class="browse_all_btn" @onclick="">Browse all</button>or look for a specific keyword to browse:
+    <button class="browse_all_btn" onclick="">Browse all</button>or look for a specific keyword to browse:
 </div>
 
 @if (keywords == null)
