Link names and maximum file sizes Exception handling for big files

--- a/ProjectBank/Client/Pages/Projects.razor
+++ b/ProjectBank/Client/Pages/Projects.razor
@@ -25,7 +25,7 @@
                         <div>@keyword</div>
                     }}
                         <div style="color:blue;">
-                            <a href="@Project.FileUrl" download="@Project.Title??.pdf">Project pdf</a>
+                            <a href="@Project.FileUrl" download="@Project.Title??.pdf">@Project.Title .pdf</a>
                         </div>
                     </div>
                 </div>
