--- a/ProjectBank/Client/Pages/Swipe.razor
+++ b/ProjectBank/Client/Pages/Swipe.razor
@@ -58,29 +58,30 @@ else
 @code
 {
     [Parameter]
-    public string keyword { get; set; }
+    public string? keyword { get; set; }
 
     private int _i = 10;
 
     private int _idCounter = 0;
 
-    private ProjectDetailsDto[]? _projects;
+    private ProjectDetailsDto[] _projects = null!;
 
-    private List<ProjectDetailsDto> _likedProjects;
+    private List<ProjectDetailsDto> _likedProjects = null!;
 
-    private ProjectDetailsDto _currentProject;
+    private ProjectDetailsDto _currentProject = null!;
     private ClaimsPrincipal? _user;
     private IEnumerable<Claim>? _claims;
     private string? _aToken;
 
-    private string _keywordString;
+    private string? _keywordString;
     
 
     protected override async Task OnInitializedAsync()
     {
         try
         {
-            _projects = await Http.GetFromJsonAsync<ProjectDetailsDto[]>($"/api/Keyword/{keyword}");
+            var projects = await Http.GetFromJsonAsync<ProjectDetailsDto[]>($"/api/Keyword/{keyword}");
+            if (projects != null) _projects = projects;
             _likedProjects = new List<ProjectDetailsDto>();
             _user = (await AuthenticationStateProvider.GetAuthenticationStateAsync()).User;
             _claims = _user.Claims;
@@ -138,7 +139,7 @@ else
             
         }
         _keywordString = getKeyWords();
-        InvokeAsync(StateHasChanged);
+        await InvokeAsync(StateHasChanged);
     }
 
 
