--- a/ProjectBank/Client/Shared/NavMenu.razor
+++ b/ProjectBank/Client/Shared/NavMenu.razor
@@ -43,6 +43,11 @@
             <span class="oi oi-pencil" aria-hidden="true"></span> Claims
             </NavLink>
         </div>
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/createproject">
+            <span class="oi oi-pencil" aria-hidden="true"></span> Create a project
+            </NavLink>
+        </div>
     </nav>
 </div>
 <hr>
