--- a/ProjectBank/Client/Shared/ImageUploader.razor
+++ b/ProjectBank/Client/Shared/ImageUploader.razor
@@ -22,12 +22,10 @@
 
     [Parameter]
     public int projectId { get; set; }
-
     
     private ProjectDetailsDto toBeUpdated;
 
-
-    private ProjectUpdateDto project;
+    private ProjectUpdateDto? project;
 
     private string imageName = Guid.NewGuid().ToString();
 
@@ -62,7 +60,7 @@
             content.Add(byteContent, "file", imageFile.Name);
             var response = await Http.PostAsync($"api/Image/{imageName}", content);
 
-            if (response.IsSuccessStatusCode)
+            if (response.IsSuccessStatusCode && project != null)
             {
                 project.ImageUrl = response.Headers.Location?.ToString();
                 var updated = await Http.PutAsJsonAsync($"api/Project/{project.Id}", project);
