--- a/ProjectBank/Client/Shared/ImageUploader.razor
+++ b/ProjectBank/Client/Shared/ImageUploader.razor
@@ -5,14 +5,14 @@
 <div class="form-group input-group">
     @*<RadzenUpload Multiple="true" id="Image" Accept="image/*" OnChange="@OnFileSelection" Url="upload/multiple" Style="margin-bottom: 15px;">Image</RadzenUpload>
     <RadzenButton Text="Clear" Click="ClearImage" Style="margin-bottom: 15px;" />*@
-    <InputFile id="Image" OnChange="@OnFileSelection" accept=".png, .jpeg, .gif" class="form-control"/>
-    <button type="button" @onclick="UploadImage" class="btn btn-secondary" style="background-color:darkgreen; opacity: 70">Upload</button>
-    <button type="button" @onclick="ClearImage" class="btn btn-secondary" >Clear</button>
+    <InputFile id="Image" OnChange="@OnFileSelection" accept=".png, .jpeg, .gif, .jpg" class="form-control"/>
 </div>
 <div class="form-group">
         @if (!string.IsNullOrWhiteSpace(imageUrl))
         {
             <div style="display: flex; justify-content: center; align-content: center; padding: 1em"><img src="@imageUrl" alt="Project Image" class="img-thumbnail"></div>
+            <button type="button" @onclick="UploadImage" class="btn btn-secondary" style="background-color:darkgreen; opacity: 70">Upload</button>
+            <button type="button" @onclick="ClearImage" class="btn btn-secondary" >Clear</button>
         }@if (sizeExceeded)
          {
              <div style="display: flex; justify-content: center; align-content: center; padding: 1em; color: red">Maximum file size of 1.24 mb exceded.</div>
