Small style changes

--- a/ProjectBank/Client/wwwroot/css/browse.css
+++ b/ProjectBank/Client/wwwroot/css/browse.css
@@ -3,6 +3,7 @@
     grid-template-columns: 25% 25% 25% 25%;
   }
   .grid-item {
+    background: #ffffff;
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
     font-size: 30px;
@@ -11,6 +12,15 @@
     margin-right: 20px;
     height: 200px;
     border-radius: 10px;
+    transition: all 0.25s ease;
+    
+  }
+  
+  .grid-item:hover{
+    transition-delay: 0.25s;
+    background: linear-gradient(10deg, #fd297b, #ff655b);
+    color: white;
+    box-shadow: 5px 7px #dcd8d8;
   }
   
   .browse_all{
