--- a/ProjectBank/Client/wwwroot/css/swipe.css
+++ b/ProjectBank/Client/wwwroot/css/swipe.css
@@ -32,6 +32,8 @@
     position: relative;
 }
 
+
+
 .project_builder .project_content{
     color: #1a1e21;
     margin-left: 15px;
@@ -97,12 +99,16 @@
 }
 
 .like_and_dislike_btn_div button{
-    background-image: linear-gradient(15deg, #ff655b, #fd297b);
+    background-image: linear-gradient(15deg, #d72269, #dc584f);
     border: none;
     width: 50px;
     height: 50px;
     border-radius: 100%;
     font-size: 30px;
+}
+
+.like_and_dislike_btn_div button:hover{
+    background-image: linear-gradient(15deg, #fd297b, #ff655b);
 }
 
 .like_and_dislike_btn_div label{
