- Add account picture - Add setup account picture in settings

--- a/ProjectBank/Client/Pages/Projects.razor
+++ b/ProjectBank/Client/Pages/Projects.razor
@@ -50,7 +50,7 @@ else
                     <div style="color:black;">"Insert role here"</div>
                     <b style="color:black;">@(_project?.AuthorName)</b>
                     <div><b style="color:black;">Upload Image:</b>
-                        <ImageUploader projectId="_project!.Id"></ImageUploader></div>
+                        <ImageUploader Id="_project!.Id" isProject="true"></ImageUploader></div>
                     <b style="color:black;">Upload PDF:</b>
                     <div><PdfUploader projectId="_project.Id"></PdfUploader></div>
                 </div>
