--- a/ProjectBank/Client/Pages/AccountSettings.razor
+++ b/ProjectBank/Client/Pages/AccountSettings.razor
@@ -44,6 +44,22 @@
 
 <RadzenButton Click=@Edit Text="Edit profile"/>
 <RadzenButton style="width: 160px" IsBusy=@busyProfile Click=@OnBusyClickProfile Text="Save" />
+
+<h2>Profile picture</h2>
+<RadzenFieldset class="mb-4">
+    <div class="row">
+        <div class="align-items-center d-flex col-md-3">
+            <RadzenLabel Text="Profile Picture:" />
+        </div>
+        <div class="col-md-9">
+            @if (account.PictureUrl != null)
+            {
+                <img class="card-img-top" src=@account.PictureUrl alt="Project image"/>
+            }
+        </div>
+    </div>
+    <ImageUploader id=@account.Id isProject="false"></ImageUploader>
+</RadzenFieldset>
     
 @code {
 
@@ -55,6 +71,7 @@
     private string? email;
     private string? currentRole;
     private string? token;
+    private AccountDetailsDto account;
     
     //PAGE SCRIPTS
     private void Edit()
@@ -69,7 +86,7 @@
         currentRole = user.FindFirst(c => c.Type.Contains("appRole"))?.Value;
         email = user.FindFirst(c => c.Type.Contains("preferred_username"))?.Value;
         token = user.FindFirst(c => c.Type.Contains("aud"))?.Value;
-        
+        account = await Http.GetFromJsonAsync<AccountDetailsDto>($"api/Account/{token}");
     }
   
     private async Task OnBusyClickProfile()
